# rag-mcp-assistant

./: .env.example  .gitignore  Dockerfile  README.md  TechnicalDetails.md  docker-compose.yml  main.py  pyproject.toml
data/documents/: rag_and_mcp_concepts.md
scripts/: demo_rag.py  ingest_documents.py
src/: config.py
src/api/: app.py
src/api/routes/: documents.py  health.py  mcp.py  rag.py
src/api/static/: index.html
src/llm/: base.py  prompt_templates.py
src/mcp/: client.py  prompts.py  resources.py  server.py  tools.py
src/rag/: context_compression.py  crawler.py  document_loader.py  embeddings.py  pipeline.py  query_expansion.py  reranker.py  retriever.py  text_splitter.py  vector_store.py  web_search.py
tests/: conftest.py  test_api.py
tests/test_mcp/: test_server.py
tests/test_rag/: test_pipeline.py
