[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-mcp-assistant"
version = "0.1.0"
description = "A full-featured RAG + MCP (Model Context Protocol) assistant demonstrating all key concepts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",

    # LLM & RAG
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "openai>=2.0.0",

    # Vector store
    "chromadb>=1.0.0",

    # Embeddings
    "sentence-transformers>=4.0.0",
    "tiktoken>=0.7.0",

    # Document loading
    "pypdf>=4.2.0",
    "unstructured>=0.14.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",

    # Reranking & search
    "rank-bm25>=0.2.2",
    "flashrank>=0.2.0",

    # MCP (Model Context Protocol) - official Anthropic SDK
    "mcp>=1.0.0",

    # Config & utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
rag-mcp = "src.api.app:main"
ingest = "scripts.ingest_documents:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
